{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 12,
  "lineage": "31212145-27bd-f869-f432-24f5b5dfffb9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "cdn_bucket_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.149.205.214",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-12-27T10:51:04.415-08:00",
            "id": "projects/teste-buckers/global/addresses/bucket-teste-admin-ip",
            "name": "bucket-teste-admin-ip",
            "prefix_length": 0,
            "project": "teste-buckers",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/addresses/bucket-teste-admin-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "cdn_global_forwarding_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/teste-buckers/global/forwardingRules/teste-http-lb-forwarding-rule",
            "ip_address": "34.149.205.214",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "teste-http-lb-forwarding-rule",
            "port_range": "80",
            "project": "teste-buckers",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/forwardingRules/teste-http-lb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/targetHttpProxies/cdn-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.cdn_backend_bucket_tatic_vero_prod",
            "google_compute_global_address.cdn_bucket_address",
            "google_compute_target_http_proxy.cdn_http_proxy",
            "google_compute_url_map.cdn_url_map_http_lb",
            "google_storage_bucket.bucket_tatic_vero_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "cdn_global_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/teste-buckers/global/forwardingRules/teste-https-lb-forwarding-rule",
            "ip_address": "34.149.205.214",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "teste-https-lb-forwarding-rule",
            "port_range": "443",
            "project": "teste-buckers",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/forwardingRules/teste-https-lb-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/targetHttpsProxies/cdn-https-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.cdn_backend_bucket_tatic_vero_prod",
            "google_compute_global_address.cdn_bucket_address",
            "google_compute_managed_ssl_certificate.cdn_certificate",
            "google_compute_target_https_proxy.cdn_https_proxy",
            "google_compute_url_map.cdn_url_map_https_lb",
            "google_storage_bucket.bucket_tatic_vero_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "cdn_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-12-27T10:51:29.086-08:00",
            "id": "projects/teste-buckers/global/targetHttpProxies/cdn-http-proxy",
            "name": "cdn-http-proxy",
            "project": "teste-buckers",
            "proxy_bind": false,
            "proxy_id": 2300135164097312222,
            "self_link": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/targetHttpProxies/cdn-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/urlMaps/teste-admin-http-lb"
          },
          "dependencies": [
            "google_compute_backend_bucket.cdn_backend_bucket_tatic_vero_prod",
            "google_compute_url_map.cdn_url_map_http_lb",
            "google_storage_bucket.bucket_tatic_vero_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "cdn_https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-12-27T10:51:29.016-08:00",
            "id": "projects/teste-buckers/global/targetHttpsProxies/cdn-https-proxy",
            "name": "cdn-https-proxy",
            "project": "teste-buckers",
            "proxy_bind": false,
            "proxy_id": 7870939559279179230,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/targetHttpsProxies/cdn-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/sslCertificates/cdn-managed-certificate"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/urlMaps/teste-admin-https-lb"
          },
          "dependencies": [
            "google_compute_backend_bucket.cdn_backend_bucket_tatic_vero_prod",
            "google_compute_managed_ssl_certificate.cdn_certificate",
            "google_compute_url_map.cdn_url_map_https_lb",
            "google_storage_bucket.bucket_tatic_vero_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "cdn_url_map_http_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-12-27T10:51:16.960-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/backendBuckets/web-admin-backend-bucket",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "iHjnDEYsnUg=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/teste-buckers/global/urlMaps/teste-admin-http-lb",
            "map_id": 9057760613688128971,
            "name": "teste-admin-http-lb",
            "path_matcher": [],
            "project": "teste-buckers",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/urlMaps/teste-admin-http-lb",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.cdn_backend_bucket_tatic_vero_prod",
            "google_storage_bucket.bucket_tatic_vero_prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "cdn_url_map_https_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-12-27T10:51:16.983-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/backendBuckets/web-admin-backend-bucket",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "auZtml4CDP8=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/teste-buckers/global/urlMaps/teste-admin-https-lb",
            "map_id": 5579974510052357579,
            "name": "teste-admin-https-lb",
            "path_matcher": [],
            "project": "teste-buckers",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teste-buckers/global/urlMaps/teste-admin-https-lb",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_bucket.cdn_backend_bucket_tatic_vero_prod",
            "google_storage_bucket.bucket_tatic_vero_prod"
          ]
        }
      ]
    }
  ]
}